--- a/manifest.json
+++ b/manifest.json
@@ -7193,6 +7193,18 @@
     },
     {
       "type": "ManagedReference",
+      "source_relative_path": "api-source/WarcraftLegacies.Source.Quests.Scourge.QuestScouringofLordaeron.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api-source/WarcraftLegacies.Source.Quests.Scourge.QuestScouringofLordaeron.html",
+          "hash": "U8E6FpWZ2EmGaOa+4a+Fow=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
       "source_relative_path": "api-source/WarcraftLegacies.Source.Quests.Scourge.QuestSpiderWar.yml",
       "output": {
         ".html": {
@@ -7209,7 +7221,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/WarcraftLegacies.Source.Quests.Scourge.html",
-          "hash": "GylZ6GLXfjCFQOtcnRrXMg=="
+          "hash": "paP6aYMVkATWlv0eqVVmQw=="
         }
       },
       "is_incremental": false,
@@ -7457,6 +7469,18 @@
     },
     {
       "type": "ManagedReference",
+      "source_relative_path": "api-source/WarcraftLegacies.Source.Quests.Sunfury.QuestArea52.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api-source/WarcraftLegacies.Source.Quests.Sunfury.QuestArea52.html",
+          "hash": "h4TOWhBW5xAWHJ4ZLrSxSg=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
       "source_relative_path": "api-source/WarcraftLegacies.Source.Quests.Sunfury.QuestSolarian.yml",
       "output": {
         ".html": {
@@ -7509,7 +7533,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/WarcraftLegacies.Source.Quests.Sunfury.html",
-          "hash": "CgwQ2kK6iArq1ZwP+whb6A=="
+          "hash": "K1MJ+IYIANEpJNMRHSVowQ=="
         }
       },
       "is_incremental": false,
@@ -9657,7 +9681,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/toc.html",
-          "hash": "/EVBwMmDvooiXBEYii+rew=="
+          "hash": "V9zqqJmBftRBoEL5mGkCAQ=="
         }
       },
       "is_incremental": false,
@@ -9732,7 +9756,7 @@
         "ManagedReferenceDocumentProcessor": {
           "can_incremental": false,
           "incrementalPhase": "build",
-          "total_file_count": 803,
+          "total_file_count": 805,
           "skipped_file_count": 0
         },
         "TocDocumentProcessor": {
